developed the notification flow
